--- a/src/templates/partials/page-header.twig
+++ b/src/templates/partials/page-header.twig
@@ -1,30 +1,37 @@
 <header class="page-header" aria-labelledby="midd-page-header-label">
-  <div class="page-header__row">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-push-1 col-md-11">
 
-    <div class="page-header__primary">
-      <div class="page-header__breadcrumb">
-        {% include 'partials/breadcrumb.twig' with { items: breadcrumb } %}
-      </div>
-      <div class="page-header__content">
-        <h1 class="page-header__title" id="midd-page-header-label">{{title}}</h1>
-      </div>
-      {% set _block = block('controls') %}
-      {% if _block is not empty %}
-        <div class="page-header__controls">
-          {{_block}}
+        <div class="row">
+
+          <div class="page-header__primary">
+            <div class="page-header__breadcrumb">
+              {% include 'partials/breadcrumb.twig' with { items: breadcrumb } %}
+            </div>
+            <div class="page-header__content">
+              <h1 class="page-header__title" id="midd-page-header-label">{{title}}</h1>
+            </div>
+            {% set _block = block('controls') %}
+            {% if _block is not empty %}
+              <div class="page-header__controls">
+                {{_block}}
+              </div>
+            {% endif %}
+          </div>
+
+          {% if callout_title or callout_link_text %}
+            <div class="page-header__secondary">
+              {% include 'partials/page-callout.twig' with {
+                title: callout_title,
+                link_url: callout_link_url,
+                link_text: callout_link_text
+              } %}
+            </div>
+          {% endif %}
+
         </div>
-      {% endif %}
-    </div>
-
-    {% if callout_title or callout_link_text %}
-      <div class="page-header__secondary">
-        {% include 'partials/page-callout.twig' with {
-          title: callout_title,
-          link_url: callout_link_url,
-          link_text: callout_link_text
-        } %}
       </div>
-    {% endif %}
-
+    </div>
   </div>
 </header>
