start swiper and slideshow components

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -74,6 +74,7 @@
 @import 'components/site-menu-button';
 @import 'components/site-nav';
 @import 'components/site-search';
+@import 'components/slideshow';
 @import 'components/social-links';
 @import 'components/speaker';
 @import 'components/spotlight-item';
