reduce header padding on medium screen so content is not so close to the header

--- a/src/scss/components/_site-header.scss
+++ b/src/scss/components/_site-header.scss
@@ -23,8 +23,13 @@
   @include media(md) {
     display: block;
     height: auto;
-    padding: 30px;
+    padding: 20px;
     padding-bottom: 70px;
+  }
+
+  @include media(lg) {
+    padding-left: 30px;
+    padding-right: 30px;
   }
 }
 
