refactor headings and paragraphs
Most of the site has a mixture of heading font sizes, margins, etc. If we globally reset them all to the same size then specifically set the sizing via component class or the typography wrapper, we have more predictable results.

--- a/src/scss/components/_card.scss
+++ b/src/scss/components/_card.scss
@@ -14,6 +14,7 @@
 
 .card__title {
   font-size: 22px;
+  margin-bottom: 20px;
 }
 
 .card__title--lg {
@@ -27,8 +28,5 @@
   margin-bottom: 20px;
 }
 
-.card__body {
-  p:last-child {
-    margin-bottom: 0;
-  }
+.card__blurb {
 }
