--- a/src/scss/components/_event-detail.scss
+++ b/src/scss/components/_event-detail.scss
@@ -59,3 +59,14 @@
 .event-detail__contact {
   margin-bottom: 60px;
 }
+
+.event-detail__meta-title {
+  font-size: 26px;
+  font-family: $font-family-sans-serif;
+  font-weight: $font-weight-semibold;
+  margin-bottom: 20px;
+}
+
+.event-detail__text {
+  margin-bottom: 20px;
+}
