--- a/src/scss/components/_speaker.scss
+++ b/src/scss/components/_speaker.scss
@@ -11,7 +11,7 @@
   font-size: 16px;
   font-weight: bold;
   font-family: $font-family-sans-serif;
-  margin-bottom: 0;
+  margin-bottom: 10px;
   // line-height: 1;
 }
 
