--- a/src/templates/partials/homepage-hero.twig
+++ b/src/templates/partials/homepage-hero.twig
@@ -11,9 +11,7 @@
       <h1 class="homepage-hero__title">
         <a href="#" class="homepage-hero__link">Water Sanitation Research and Development, India</a>
       </h1>
-      <div class="homepage-hero__blurb">
-        <p>Access to safe water and adequate sanitation services has proven to be one of the most efficient ways of improving human health.</p>
-      </div>
+      <p class="homepage-hero__blurb">Access to safe water and adequate sanitation services has proven to be one of the most efficient ways of improving human health.</p>
       <div class="homepage-hero__more-link">
         <a href="#" class="button button--secondary">Read More</a>
       </div>
