--- a/src/templates/t08-event-detail.twig
+++ b/src/templates/t08-event-detail.twig
@@ -70,9 +70,9 @@
               <div class="row">
                 <div class="col-sm-6">
 
-                <h3>Where</h3>
+                <h3 class="event-detail__meta-title">Where</h3>
 
-                <address>McCone Irvine Auditorium<br>
+                <address class="event-detail__text">McCone Irvine Auditorium<br>
                 460 Pierce St<br>
                 Monterey, CA 93940</address>
 
@@ -87,9 +87,9 @@
                   </li>
                 </ul>
 
-                <h3>Contact Organizer</h3>
+                <h3 class="event-detail__meta-title">Contact Organizer</h3>
 
-                <p>Priscilla Lorenzo<br>
+                <p class="event-detail__text">Priscilla Lorenzo<br>
                   <a href="#" class="u-link-border">plorenzo@middlebury.edu</a><br>
                   <a href="tel:" class="u-link-border">802-555-0000</a>
                 </p>
