--- a/src/scss/base/_global.scss
+++ b/src/scss/base/_global.scss
@@ -56,11 +56,11 @@ fieldset {
 %p {
   color: $text-gray;
   font-family: $font-family-serif;
-  font-size: 16px;
-  line-height: 28px;
+  // font-size: 16px;
+  // line-height: 28px;
   // font-weight: $font-weight-book;
-  margin-top: 0;
-  margin-bottom: 20px;
+  margin: 0;
+  // margin-bottom: 20px;
 }
 
 p {
@@ -100,75 +100,10 @@ h2,
 h3,
 h4,
 h5,
-h6,
-.h1,
-.h2,
-.h3,
-.h4,
-.h5,
-.h6 {
-  margin-top: 0;
-  margin-bottom: 1rem;
+h6 {
   font-family: $font-family-serif;
-}
-
-h1,
-.h1 {
-  font-size: 20px;
-  line-height: 24px;
-
-  @include media(md) {
-    font-size: 30px;
-    line-height: 38px;
-  }
-}
-
-h2,
-.h2 {
-  font-size: 22px;
-  font-weight: $font-weight-semibold;
-  line-height: 26px;
-
-  @include media(md) {
-    font-size: 26px;
-    line-height: 30px;
-  }
-}
-
-h3,
-.h3 {
   font-size: 18px;
-  line-height: 22px;
   font-weight: normal;
-
-  @include media(md) {
-    font-size: 26px;
-    line-height: 30px;
-  }
-}
-
-h4,
-.h4 {
-  font-size: 16px;
-  font-weight: $font-weight-semibold;
-  line-height: 20px;
-  margin-bottom: 5px;
-
-  @include media(md) {
-    font-size: 18px;
-    line-height: 22px;
-  }
-}
-
-h5,
-.h5 {
-  font-size: 14px;
-  font-weight: $font-weight-semibold;
-  line-height: 18px;
-  margin-bottom: 5px;
-
-  @include media(md) {
-    font-size: 16px;
-    line-height: 20px;
-  }
+  line-height: 1.4;
+  margin: 0;
 }
