--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -1,4 +1,18 @@
 .typography {
+  :first-child {
+    margin-top: 0;
+  }
+
+  p {
+    font-size: 18px;
+    line-height: 1.5;
+    margin-bottom: 30px;
+  }
+
+  a {
+    text-decoration: underline;
+  }
+
   ul,
   ol {
     margin-bottom: 20px;
@@ -52,5 +66,43 @@
       flex: 0 0 50%;
       padding-top: 20px;
     }
+  }
+
+  h1 {
+    font-size: 28px;
+    margin-top: 50px;
+    margin-bottom: 20px;
+  }
+
+  h2 {
+    font-size: 26px;
+    margin-top: 50px;
+    margin-bottom: 20px;
+  }
+
+  h3 {
+    font-size: 24px;
+    margin-top: 30px;
+    margin-bottom: 20px;
+  }
+
+  h4 {
+    font-size: 22px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+  }
+
+  h5 {
+    font-size: 14px;
+    font-weight: $font-weight-bold;
+    margin-top: 5px;
+    margin-bottom: 5px;
+  }
+
+  h6 {
+    font-size: 12px;
+    font-weight: $font-weight-bold;
+    margin-top: 5px;
+    margin-bottom: 5px;
   }
 }
