--- a/src/scss/components/_section.scss
+++ b/src/scss/components/_section.scss
@@ -47,9 +47,7 @@
   letter-spacing: .1rem;
   font-weight: $font-weight-semibold;
   font-family: $font-family-sans-serif-condensed;
-  font-size: rem(16);
-  margin-bottom: 0;
-  margin-top: 0;
+  font-size: 16px;
 }
 
 .section__nav {
