--- a/src/scss/components/_spotlight-item.scss
+++ b/src/scss/components/_spotlight-item.scss
@@ -95,6 +95,7 @@ $spotlight-item-breakpoint: 'sm';
 .spotlight-item__title {
   font-size: 20px;
   font-family: $font-family-serif;
+  margin-bottom: 10px;
 
   @include media(md) {
     font-size: 22px;
