add media component for styling images

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -44,6 +44,7 @@
 @import 'components/input-group';
 @import 'components/list';
 @import 'components/media-object';
+@import 'components/media';
 @import 'components/mission-modal';
 @import 'components/mission-selector';
 @import 'components/modal';
