--- a/src/scss/components/_profile-section.scss
+++ b/src/scss/components/_profile-section.scss
@@ -3,8 +3,10 @@
 }
 
 .profile-section__title {
+  font-size: 26px;
   font-family: $font-family-sans-serif;
-  font-weight: 600;
+  font-weight: $font-weight-semibold;
+  margin-bottom: 20px;
 }
 
 .profile-section__list {
