--- a/src/templates/partials/event-teaser.twig
+++ b/src/templates/partials/event-teaser.twig
@@ -9,10 +9,10 @@
     </a>
   </figure>
   <div class="event-teaser__body">
-    <p class="event-teaser__meta"><strong><time datetime="">September 25, 2016</time></strong> &middot; <strong><time datetime="">5:00 PM</time></strong></p>
-    <p class="event-teaser__meta"><span>{{local}}</span></p>
+    <p class="event-teaser__datetime"><strong><time datetime="">September 25, 2016</time></strong> &middot; <strong><time datetime="">5:00 PM</time></strong></p>
+    <p class="event-teaser__local"><span>{{local}}</span></p>
     <h3 class="event-teaser__title" id="midd-event-label-{{i}}"><a href="{{url}}">{{title}}</a></h3>
-    <div class="event-teaser__blurb">{{blurb}}</div>
+    <p class="event-teaser__blurb">{{blurb}}</p>
     <ul class="event-teaser__metalist">
       {% for item in metalist %}
         <li class="event-teaser__metaitem"><em>{{item.text}}</em></li>
