--- a/src/templates/layout-c8.twig
+++ b/src/templates/layout-c8.twig
@@ -8,7 +8,7 @@
     <div class="row">
       <div class="col-md-11 col-md-push-1">
 
-        <div class="page__main">
+        <div class="page__row">
           <div class="page__nav">
             {% include 'partials/page-nav.twig' with page_nav %}
           </div>
