remove data attributes which are applied via js now

--- a/src/templates/t19-curriculum.twig
+++ b/src/templates/t19-curriculum.twig
@@ -67,9 +67,9 @@
       <tbody>
         {% for i in 0..3 %}
         <tr>
-          <td data-th="Course">Economics</td>
-          <td data-th="Number">15.02</td>
-          <td data-th="Overview">
+          <td>Economics</td>
+          <td>15.02</td>
+          <td>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae eos necessitatibus, quasi nobis minus minima ex dolorem illum in fuga, ea rem explicabo optio porro non. Aliquid quos, reiciendis minima?</p>
             <ul>
               <li>Lorem ipsum dolor sit amet</li>
@@ -78,7 +78,7 @@
               <li>Quisquam commodi ea veritatis</li>
             </ul>
           </td>
-          <td data-th="Professors and Instructors">
+          <td>
             <strong class="u-sans-serif">Jeff Dayton-Johnson</strong>
           </td>
         </tr>
@@ -97,10 +97,10 @@
       <tbody>
         {% for i in 0..3 %}
         <tr>
-          <td data-th="Course">
+          <td>
             Complexity and Systems Thinking
           </td>
-          <td data-th="Overview">
+          <td>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis voluptate maiores excepturi laboriosam, reiciendis eos adipisci. Ipsa fugit dolorem in, voluptates sit expedita, tempora delectus excepturi praesentium nisi, architecto quae.</p>
             <ul>
               <li>Lorem ipsum dolor sit amet</li>
