move repeated markup to layout file

--- a/src/templates/layout.twig
+++ b/src/templates/layout.twig
@@ -14,7 +14,12 @@
   <div class="site-container">
     {% include 'partials/header.twig' %}
     <main class="main" id="midd-main">
-      {% block page %}{% endblock %}
+      <section class="page">
+        {% if page_header %}
+          {% include 'partials/page-header.twig' with page_header %}
+        {% endif %}
+        {% block page %}{% endblock %}
+      </section>
     </main>
     {% include 'partials/footer.twig' %}
   </div>
