progress on top level page with grid nav

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -38,6 +38,7 @@
 @import 'components/footer-menu';
 @import 'components/footer';
 @import 'components/form';
+@import 'components/grid-nav';
 @import 'components/hero-form';
 @import 'components/homepage-hero';
 @import 'components/icon';
@@ -52,6 +53,7 @@
 @import 'components/page-header';
 @import 'components/page-hero';
 @import 'components/page-nav';
+@import 'components/page-top';
 @import 'components/page';
 @import 'components/pagination';
 @import 'components/panel';
