--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -4,9 +4,14 @@
   }
 
   p {
-    font-size: 18px;
-    line-height: 1.5;
-    margin-bottom: 30px;
+    font-size: 16px;
+    line-height: 28px;
+    margin-bottom: 24px;
+
+    @include media(md) {
+      font-size: 18px;
+      line-height: 30px;
+    }
   }
 
   a {
@@ -15,9 +20,16 @@
 
   ul,
   ol {
-    margin-bottom: 20px;
-    list-style-type: disc;
+    margin-bottom: 34px;
     padding-left: 20px;
+  }
+
+  ul {
+    list-style-type: disc;
+  }
+
+  ol {
+    list-style-type: decimal;
   }
 
   li {
@@ -25,7 +37,7 @@
     color: $gray;
 
     &:not(:last-of-type) {
-      margin-bottom: 5px;
+      margin-bottom: 18px;
     }
   }
 
@@ -68,41 +80,74 @@
     }
   }
 
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    font-family: $font-family-sans-serif;
+    font-weight: $font-weight-semibold;
+  }
+
   h1 {
-    font-size: 28px;
+    font-size: 20px;
+    line-height: 24px;
     margin-top: 50px;
     margin-bottom: 20px;
+
+    @include media(md) {
+      font-size: 30px;
+      line-height: 38px;
+    }
   }
 
   h2 {
-    font-size: 26px;
+    font-size: 22px;
+    line-height: 26px;
     margin-top: 50px;
     margin-bottom: 20px;
+
+    @include media(md) {
+      font-size: 26px;
+      line-height: 30px;
+    }
   }
 
   h3 {
-    font-size: 24px;
+    font-size: 18px;
+    line-height: 24px;
     margin-top: 30px;
     margin-bottom: 20px;
+
+    @include media(md) {
+      font-size: 20px;
+      line-height: 28px;
+    }
   }
 
   h4 {
-    font-size: 22px;
-    margin-top: 5px;
-    margin-bottom: 5px;
+    font-size: 16px;
+    font-weight: $font-weight-medium;
+    line-height: 22px;;
+    margin-top: 34px;
+    margin-bottom: 24px;
+
+    @include media(md) {
+      font-size: 18px;
+      line-height: 22px;
+    }
   }
 
   h5 {
     font-size: 14px;
-    font-weight: $font-weight-bold;
-    margin-top: 5px;
-    margin-bottom: 5px;
+    margin-top: 30px;
+    margin-bottom: 20px;
   }
 
   h6 {
     font-size: 12px;
-    font-weight: $font-weight-bold;
-    margin-top: 5px;
-    margin-bottom: 5px;
+    margin-top: 20px;
+    margin-bottom: 10px;
   }
 }
