--- a/src/templates/c8-basic-content.twig
+++ b/src/templates/c8-basic-content.twig
@@ -48,6 +48,30 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus reiciendis odit, adipisci consequatur repellat non distinctio consequuntur delectus, sit veritatis ullam quaerat dolorem perspiciatis voluptas sed pariatur assumenda ut sint.</p>
     <h6>Some headline here</h6>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus reiciendis odit, adipisci consequatur repellat non distinctio consequuntur delectus, sit veritatis ullam quaerat dolorem perspiciatis voluptas sed pariatur assumenda ut sint.</p>
+
+    <h3>short list</h3>
+
+    <ul>
+      <li>some text</li>
+      <li>some more text sorta long ish text</li>
+      <li>some more long ish text</li>
+    </ul>
+
+
+    <h4>Unordered list</h4>
+    <ul>
+      <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed quas voluptatibus minima facere nesciunt odio, fugiat distinctio minus consequatur quo placeat neque expedita laudantium incidunt blanditiis laborum nam similique illum.</li>
+      <li>Excepturi, minima provident. Reiciendis illo assumenda eveniet vero, velit nihil id, animi in nesciunt voluptatum, beatae officia! Nostrum consequuntur commodi nisi velit voluptatum tempore quisquam illo dolore, fugiat vitae distinctio.</li>
+      <li>Quae corrupti officia debitis suscipit, quis consequuntur consequatur perspiciatis eveniet odio non! Recusandae, assumenda vero reprehenderit est voluptate qui natus, itaque sapiente officia ex voluptatibus tempora facere error enim repudiandae!</li>
+    </ul>
+
+    <h4>Ordered list</h4>
+    <ol>
+      <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem asperiores ut, aliquid eveniet deleniti impedit mollitia earum, explicabo quaerat, voluptate, dignissimos omnis sed aliquam. Hic possimus eum veritatis corporis labore.</li>
+      <li>Esse numquam nulla at ipsam, consequatur dolore! Officiis enim architecto, sed delectus exercitationem veritatis, voluptatum beatae excepturi sapiente quas veniam hic cum vero itaque, possimus, fuga? Magnam, consequatur reiciendis velit.</li>
+      <li>Dignissimos autem sit deserunt ratione illum reiciendis, atque, facere repellat quaerat excepturi tempore neque cupiditate. Ut unde autem dolores, accusamus, magnam pariatur, facere corrupti doloribus obcaecati fugiat earum quis nisi.</li>
+      <li>Officiis inventore, repellendus ullam laudantium amet aperiam porro illum est, tempora temporibus ut. Placeat quisquam reprehenderit architecto repudiandae fuga id nisi, modi eum, libero mollitia quis rerum molestiae sunt itaque?</li>
+    </ol>
   </div>
 
   {# G3 image paragraph #}
