move paragraph partials to own folder

--- a/src/templates/c8-basic-content.twig
+++ b/src/templates/c8-basic-content.twig
@@ -94,8 +94,8 @@
     </div>
   </div>
 
-  {% include 'partials/video.twig' %}
+  {% include 'paragraphs/video.twig' %}
 
-  {% include 'partials/slideshow.twig' %}
+  {% include 'paragraphs/slideshow.twig' %}
 
 {% endblock %}
