--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -67,6 +67,7 @@
 @import 'components/program-spotlight';
 @import 'components/projects';
 @import 'components/publications';
+@import 'components/tags';
 @import 'components/search-form';
 @import 'components/search-results-item';
 @import 'components/section';
