--- a/src/templates/paragraphs/quote.twig
+++ b/src/templates/paragraphs/quote.twig
@@ -1,4 +1,4 @@
-<blockquote class="pullquote">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias dolore dolores adipisci neque qui modi aliquam voluptates asperiores pariatur autem, eligendi sunt dolor voluptatum assumenda, soluta laborum nobis, harum, est.</p>
-  <p><small>&mdash;Michael Green</small></p>
-</blockquote>
+<figure class="pullquote pullquote--is-quote">
+  <blockquote class="pullquote__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias dolore dolores adipisci neque qui modi aliquam voluptates asperiores pariatur autem, eligendi sunt dolor voluptatum assumenda, soluta laborum nobis, harum, est.</blockquote>
+  <figcaption class="pullquote__cite">&mdash;Michael Green</figcaption>
+</figure>
