--- a/src/scss/components/_pullquote.scss
+++ b/src/scss/components/_pullquote.scss
@@ -3,36 +3,36 @@
   margin-bottom: 60px;
 
   @include media(md) {
-    // float: right;
-    // width: 400px;
-    // padding-left: 40px;
+    float: right;
+    width: 400px;
+    margin-top: 0;
+    padding-left: 40px;
   }
+}
 
-  p {
-    color: $black;
-    font-family: $font-family-sans-serif;
-    font-size: 24px;
-    line-height: 34px;
+.pullquote__text {
+  color: $black;
+  font-size: 24px;
+  line-height: 34px;
+  margin-bottom: 24px;
+  quotes: "“" "”";
 
-    &:not(:last-of-type) {
-      margin-bottom: 24px;
+  .pullquote--is-quote & {
+    position: relative;
+
+    &:before {
+      content: open-quote;
+      position: absolute;
+      top: 0;
+      right: 100%;
+    }
+
+    &:after {
+      content: close-quote;
     }
   }
 }
 
-.pullquote--marks {
-  p:first-child {
-    position: relative;
+.pullquote__cite {
 
-    &:before {
-      content: '“';
-      // color: $secondary;
-      top: 0;
-      // font-weight: 300;
-      font-size: 30px;
-      position: absolute;
-      left: 0;
-      font-family: $font-family-serif;
-    }
-  }
 }
