add missing imports

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -26,6 +26,7 @@
 @import 'components/callout-group-item';
 @import 'components/callout-group';
 @import 'components/callout-links';
+@import 'components/callout-info';
 @import 'components/callout';
 @import 'components/card';
 @import 'components/carousel';
@@ -77,6 +78,7 @@
 @import 'components/site-container';
 @import 'components/site-header';
 @import 'components/site-menu-button';
+@import 'components/story-detail';
 @import 'components/site-nav';
 @import 'components/site-search';
 @import 'components/slideshow';
