add another text paragraph for visual testing

--- a/src/templates/t10-story.twig
+++ b/src/templates/t10-story.twig
@@ -35,6 +35,8 @@
 
         <div class="story-detail__body">
 
+          {% include 'paragraphs/text.twig' %}
+
           {% include 'paragraphs/slideshow.twig' %}
 
           {% include 'paragraphs/text.twig' %}
