--- a/src/scss/components/_media.scss
+++ b/src/scss/components/_media.scss
@@ -13,6 +13,8 @@
 }
 
 .media__caption {
-  font-family: $font-family-serif;
-  font-size: 16px;
+  font-family: $font-family-sans-serif;
+  font-size: 14px;
+  color: $text-gray;
+  margin-top: 10px;
 }
