--- a/src/scss/components/_site-nav.scss
+++ b/src/scss/components/_site-nav.scss
@@ -52,11 +52,11 @@
     display: flex;
     flex-direction: column;
     height: 100%;
-    padding-left: 70px;
+    // padding-left: 70px;
 
     .site-nav--sub & {
       border-left: 1px solid $brand-secondary-dark;
-      padding-left: 12%;
+      // padding-left: 12%;
     }
   }
 }
@@ -76,7 +76,7 @@
 
 .site-nav__item {
   @include media(md) {
-    padding-right: 12%;
+    // padding-right: 12%;
   }
 
   &:hover {
@@ -106,7 +106,7 @@
 
 .site-nav__link {
   display: block;
-  font-size: 15px;
+  font-size: 16px;
   color: $white;
   position: relative;
   padding: 20px 30px;
@@ -118,7 +118,7 @@
 
   @include media(md) {
     padding: 5px 0;
-    font-size: 14px;
+    // font-size: 14px;
   }
 
   .site-nav__item:hover > & {
@@ -153,10 +153,10 @@
   }
 
   .site-nav--sub & {
-    padding-left: 70px;
+    // padding-left: 70px;
 
     @include media(md) {
-      padding-left: 0;
+      // padding-left: 0;
     }
   }
 }
@@ -174,10 +174,6 @@
   @include media(md) {
     display: none;
   }
-}
-
-.site-nav__link--accent {
-  color: $brand-secondary;
 }
 
 .site-nav__link--active {
